--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
 drf-pdf==0.2.0
+gunicorn==20.0.4
 idna==3.3
 itypes==1.2.0
 Jinja2==3.1.2
