--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       context: ../backend
       dockerfile: Dockerfile
     volumes:
-      - api_static:/app/static/
+      - backend_static:/app/static/
       - media_value:/app/media/
     depends_on:
       - db
@@ -35,12 +35,12 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - api_static:/usr/share/nginx/html/back_static/:ro
+      - backend_static:/usr/share/nginx/html/backend_static/:ro
       - media_value:/usr/share/nginx/html/media/:ro
     depends_on:
       - api
 
 volumes:
   db:
-  api_static:
+  backend_static:
   media_value:
