--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,3 +1,7 @@
+upstream foodgram_backend {
+    server api:8000;
+}
+
 server {
     listen 80;
     server_tokens off;
@@ -6,12 +10,13 @@ server {
         try_files $uri $uri/redoc.html;
         break;
     }
+
     location ~ ^/(api|admin)/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://api:8000;
+        proxy_pass http://foodgram_backend;
       }
     location / {
         root /usr/share/nginx/html;
