--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         python-version: 3.7
 
     - name: Install dependencies
-      run: | 
+      run: |
         # обновление pip
         python -m pip install --upgrade pip 
         # установка flake8 и его плагинов
@@ -30,6 +30,7 @@ jobs:
         pip install -r ./backend/requirements.txt 
     - name: Test with flake8 and django tests
       run: |
+        isort .
         # запуск проверки проекта по flake8
         python -m flake8
         # pytest
