--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         pip install -r ./backend/requirements.txt 
     - name: Test with flake8 and django tests
       run: |
+        cd backend/foodgram/
         isort .
         # запуск проверки проекта по flake8
         python -m flake8
