--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,5 @@
 upstream foodgram_backend {
-    server api:8000;
+    server backend:8000;
 }
 
 server {
@@ -9,6 +9,15 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
         break;
+    }
+
+    location /backend_static/ {
+        autoindex on;
+        alias /app/backend_static/;
+    }
+    location /media/ {
+        autoindex on;
+        alias /app/media/;
     }
 
     location ~ ^/(api|admin)/ {
