--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
 
-  api:
+  backend:
     image: serjb73/foodgram:latest
     volumes:
       - backend_static:/app/static/
@@ -33,10 +33,10 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - backend_static:/usr/share/nginx/html/static/:ro
-      - media_value:/usr/share/nginx/html/media/:ro
+      - backend_static:/app/backend_static/
+      - media_value:/app/media/
     depends_on:
-      - api
+      - backend
 
 volumes:
   db:
