--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
           script: |
             cd ~/dev/foodgram-project-react/infra/
             sudo docker-compose stop
-            sudo docker-compose rm -f api
+            sudo docker-compose rm -f backend
             sudo docker image rm serjb73/foodgram
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} > .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -86,10 +86,8 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
-            sudo docker-compose exec api python manage.py makemigrations
-            sudo docker-compose exec api python manage.py migrate
-            # sudo docker-compose exec web python manage.py collectstatic --no-input
-            # sudo docker-compose exec web python manage.py load_all_data
+            sudo docker-compose exec backend python manage.py makemigrations
+            sudo docker-compose exec backend python manage.py migrate
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
