--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   backend:
     image: serjb73/foodgram:latest
     volumes:
-      - backend_static:/app/static/
+      - backend_static:/app/backend_static/
       - media_value:/app/media/
     depends_on:
       - db
